02-pod.yml
##multiple containers

apiVersion: v1
kind: Pod
metadata:
  name: pod-02
spec:
  containers:
    - name: nginx
      image: docker.io/nginx
    - name: mongo
      image: docker.io/mongo
