06.headless.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-07
  labels:
    app: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: docker.io/rkalluru/nginx:hostname-print
