09.resouces.yml
apiVersion: v1
kind: Pod
metadata:
  name: pod-09
spec:
  containers:
    - name: nginx
      image: docker.io/nginx
      resources:
        requests:
          memory: "64Mi"
          cpu: "50m"
        limits:
          memory: "128Mi"
          cpu: "100m"
