06.service.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-06
  labels:
    appName: nginx
    example: service
spec:
  containers:
    - name: nginx
      image: docker.io/nginx
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-06
spec:
  selector:
    appName: nginx
    example: service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: v1
kind: Pod
metadata:
  name: debug-06
spec:
  containers:
    - name: nginx
      image: docker.io/rkalluru/debug

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-06-np
spec:
  type: NodePort
  selector:
    appName: nginx
    example: service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-06-lb
spec:
  type: LoadBalancer
  selector:
    appName: nginx
    example: service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
